# todo-list-rs

./: Cargo.toml  Rocket.toml  diesel.toml  index.html  sqlite.db  todo_list.json
migrations/2025-01-25-064550_create_todos/: up.sql
src/: lib.rs  main.rs  models.rs  repositories.rs  routes.rs  schema.rs
