[package]
name = "todo-list-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version="0.5.0-rc.3", features=["json"] }
diesel = { version = "2.1.0", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
dotenvy = "0.15"
rocket_dyn_templates = { version = "0.1.0-rc.4" , features=["tera"]}